deployments/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
    name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      task: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        task: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: $MONGODB_PORT
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m"
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: $MONGODB_PORT
      targetPort: $MONGODB_PORT
  selector:
    app: mongodb
    task: mongodb
