deployments/bmsadmin.production.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bmsadmin
  labels:
    app.kubernetes.io/name: "bmsadmin"
    app.kubernetes.io/part-of: "bmsadmin"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bmsadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "bmsadmin"
        app.kubernetes.io/part-of: "bmsadmin"
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - name: bmsadmin
          image: ghcr.io/sajanv88/bmsadmin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
---
kind: Service
apiVersion: v1
metadata:
  name: bmsadmin
  labels:
    app.kubernetes.io/name: "bmsadmin"
    app.kubernetes.io/part-of: "bmsadmin"
spec:
  selector:
    app.kubernetes.io/name: bmsadmin
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4001
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-ingress-bmsadmin
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
  labels:
    app.kubernetes.io/part-of: "bmsadmin"
spec:
  tls:
    - hosts:
        - bmsadmin.sajankumarv.com
      secretName: bmsadmin-tls
  rules:
    - host: bmsadmin.sajankumarv.com
      http:
        paths:
          - backend:
              service:
                name: bmsadmin
                port:
                  number: 80
            pathType: Prefix
            path: /()(.*)
