deployments/sample-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: http-ingress-whoami
    annotations:
        cert-manager.io/cluster-issuer: "lets-encrypt"
        kubernetes.io/ingress.class: "public"
spec:
    tls:
        - hosts:
              - sampleapp.dev.sajankumarv.com
          secretName: whoami-tls
    rules:
        - host: "sampleapp.dev.sajankumarv.com"
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: whoami-service
                            port:
                                number: 80
---
apiVersion: v1
kind: Service
metadata:
    name: whoami-service
spec:
    ports:
        - name: http
          port: 80
    selector:
        app: traefiklabs
        task: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: whoami
    labels:
        app: traefiklabs
        name: whoami
spec:
    replicas: 1
    selector:
        matchLabels:
            app: traefiklabs
            task: whoami
    template:
        metadata:
            labels:
                app: traefiklabs
                task: whoami
        spec:
            containers:
                - name: whoami
                  image: traefik/whoami
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: "100Mi"
                          cpu: "250m"
                      limits:
                          memory: "200Mi"
                          cpu: "500m"
